# -skill

./: .env.example  .gitignore  LICENSE  README.md  SKILL.md  aggregate.py  app.py  evaluate_recommendations.py  extract_features.py  fetch_papers.py  generate_profile.py  journal_partitions.json  journal_router.py  llm_client.py  main.py  network_config.py  pyproject.toml  requirements.txt  run.bat  run.ps1  skill.md
.github/workflows/: ci.yml
examples/: Computers_in_Human_Behavior_Profile_Report.md
tests/: test_aggregate.py  test_app.py  test_citation_validator.py  test_fetch_papers.py  test_journal_router.py  test_llm_client.py  test_skill_wrapper.py
